# Project1_Agents

./: Lab1.ipynb  README.md  Study_buddy.py  main.py  pyproject.toml
OpenAI_SDK_Projects/SDR_Email_Proj/: main.py  method1_code.py  method2_code.py
