[project]
name = "project1-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gradio>=6.19.0",
    "openai>=2.44.0",
    "openai-agents>=0.17.7",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
